[package]
name = "prompt-bot"
version = "0.2.2"
authors = ["lucky"]
edition = "2018"

[dependencies]
argh = "0.1"
teloxide = "0.5"
serenity = { version = "0.10", default_features = false, features = [ "client", "collector", "unstable_discord_api", "rustls_backend"] }
tokio = { version =  "1", features = ["rt-multi-thread", "macros"] }
